[tool.poetry]
name = "cointracker"
version = "0.1.0"
description = ""
authors = ["zdrawia <asteropheum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
